# 3DFigureManager

./: .gitignore  Cargo.toml  README.md  build.rs  clientes.jsonl  env_exemple
.cargo/: config.toml
src/: main.rs
src/utils/: clock_handle.rs  database_handle.rs  estoque_handle.rs  impressora_handle.rs  mod.rs  sell_calculator.rs  settings_handle.rs
src/utils/api/: add_pedido.rs  carrinho.rs  etiquetas.rs  finalizar_pedido.rs  frete.rs  mod.rs
ui/: app-window.slint  components.slint  shared.slint  styling.slint
ui/screens/: dashboard.slint  envio.slint  estoque.slint  printer.slint  product_calculator.slint  settings.slint
