[package]
name = "price3d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.11.0"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.140"
chrono = "0.4.41"
i-slint-backend-winit = "1.11.0"
dotenv = "0.15"
reqwest = { version = "0.12", features = ["json", "blocking"] }

[build-dependencies]
slint-build = "1.11.0"
 
[dependencies.uuid]
version = "1.16.0"
# Lets you generate random UUIDs
features = [
    "v4",
]
